chore: Updated global styling

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+html {
+  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Roboto, Ubuntu, 'Open Sans', sans-serif;
+  font-feature-settings: "ss01";
+}
