--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1398,6 +1398,54 @@ video {
   top: 100%;
 }
 
+.top-3 {
+  top: 0.75rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-0\.5 {
+  top: 0.125rem;
+}
+
+.top-\[3px\] {
+  top: 3px;
+}
+
+.top-\[4px\] {
+  top: 4px;
+}
+
+.top-\[5px\] {
+  top: 5px;
+}
+
+.top-\[6px\] {
+  top: 6px;
+}
+
+.top-\[5\.5px\] {
+  top: 5.5px;
+}
+
+.top-\[2px\] {
+  top: 2px;
+}
+
+.top-\[2\.5px\] {
+  top: 2.5px;
+}
+
+.top-\[6\.5px\] {
+  top: 6.5px;
+}
+
+.top-\[1\.5px\] {
+  top: 1.5px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -1510,6 +1558,22 @@ video {
   margin-top: 2rem;
 }
 
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
+.-ml-1 {
+  margin-left: -0.25rem;
+}
+
+.-ml-1\.5 {
+  margin-left: -0.375rem;
+}
+
+.-ml-2\.5 {
+  margin-left: -0.625rem;
+}
+
 .block {
   display: block;
 }
@@ -1542,8 +1606,20 @@ video {
   height: 0.625rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
+.h-36 {
+  height: 9rem;
+}
+
 .h-4 {
   height: 1rem;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .h-5 {
@@ -1574,8 +1650,16 @@ video {
   height: 100vh;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .min-h-full {
   min-height: 100%;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-36 {
@@ -1584,6 +1668,10 @@ video {
 
 .w-4 {
   width: 1rem;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .w-5 {
@@ -1596,6 +1684,10 @@ video {
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-60 {
+  width: 15rem;
 }
 
 .w-64 {
@@ -1628,6 +1720,14 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
 
 .min-w-0 {
@@ -1689,6 +1789,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -1709,6 +1819,10 @@ video {
 
 .content-center {
   align-content: center;
+}
+
+.content-end {
+  align-content: flex-end;
 }
 
 .items-start {
@@ -1888,6 +2002,11 @@ video {
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
 .bg-slate-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
@@ -1960,6 +2079,12 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-indigo-500 {
+  --tw-gradient-from: #6366f1;
+  --tw-gradient-to: rgb(99 102 241 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .via-blue-400 {
   --tw-gradient-to: rgb(96 165 250 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), #60a5fa, var(--tw-gradient-to);
@@ -1995,6 +2120,10 @@ video {
   --tw-gradient-to: rgb(56 189 248 / 0.3);
 }
 
+.to-sky-300 {
+  --tw-gradient-to: #7dd3fc;
+}
+
 .bg-clip-text {
   -webkit-background-clip: text;
           background-clip: text;
@@ -2006,6 +2135,10 @@ video {
 
 .fill-\[var\(--icon-foreground\)\] {
   fill: var(--icon-foreground);
+}
+
+.fill-sky-100 {
+  fill: #e0f2fe;
 }
 
 .fill-sky-400 {
@@ -2160,6 +2293,10 @@ video {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+.font-\[Benzin\] {
+  font-family: Benzin;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -2168,6 +2305,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -2195,6 +2337,19 @@ video {
   line-height: 1rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-\[22px\] {
+  font-size: 22px;
+}
+
+.text-\[26px\] {
+  font-size: 26px;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -2203,12 +2358,24 @@ video {
   font-weight: 600;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
 
+.leading-10 {
+  line-height: 2.5rem;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-amber-800 {
@@ -2988,6 +3155,36 @@ video {
           mask-image: linear-gradient(transparent,white,white);
 }
 
+@font-face {
+  font-family: "Benzin";
+
+  src: url("/fonts/Benzin/Benzin-Regular.ttf");
+
+  font-weight: 400;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Benzin";
+
+  src: url("/fonts/Benzin/Benzin-Medium.ttf");
+
+  font-weight: 500;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Benzin";
+
+  src: url("/fonts/Benzin/Benzin-Bold.ttf");
+
+  font-weight: 700;
+
+  font-style: normal;
+}
+
 html {
   font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue;
   font-feature-settings: "ss01";
@@ -3279,6 +3476,16 @@ html {
   background-color: transparent;
 }
 
+.dark .dark\:from-indigo-400 {
+  --tw-gradient-from: #818cf8;
+  --tw-gradient-to: rgb(129 140 248 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.dark .dark\:to-sky-200 {
+  --tw-gradient-to: #bae6fd;
+}
+
 .dark .dark\:fill-sky-100 {
   fill: #e0f2fe;
 }
@@ -3323,6 +3530,11 @@ html {
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-sky-100 {
+  --tw-text-opacity: 1;
+  color: rgb(224 242 254 / var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow-none {
@@ -3673,6 +3885,10 @@ html {
 
   .lg\:block {
     display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
   }
 
   .lg\:hidden {
